welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:2: error: value lenght is not a member of Array[Int]
  var L = nums.lenght} 
               ^indexOfValue:2: error: type mismatch;
 found   : Unit
 required: Int
  var L = nums.lenght} 
                     ^